[tool.poetry]
name = "ghes-version-update"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ghes_version_update"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
